--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,7 @@ layout: default
     {{ content }}
   </div>
 
-  <div class="date">
-    Written on 23 April,2024
-  </div>
+  <h3>Written on April 23,2024</h3>
 
   {% include disqus.html %}
 </article>
